--- a/assignment-7/package.json
+++ b/assignment-7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day-16",
+  "name": "assignment-7",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Rounak",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
